@@ -315,7 +315,6 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "libmodi", "libmodi\libmodi.
 		{4F90F629-A4DA-4987-8A96-9E5CDDECE80D} = {4F90F629-A4DA-4987-8A96-9E5CDDECE80D}
 		{68D72847-369A-4618-92A6-E7C4853DFF84} = {68D72847-369A-4618-92A6-E7C4853DFF84}
 		{57A7A174-4E0D-4551-AF67-C3A08288E4B8} = {57A7A174-4E0D-4551-AF67-C3A08288E4B8}
-		{} = {}
 		{C9E06175-F2CD-4C45-BB92-504310373A96} = {C9E06175-F2CD-4C45-BB92-504310373A96}
 	EndProjectSection
 EndProject
